--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@vuepress/plugin-pwa": "^1.8.2",
     "vuepress": "^1.8.2",
     "vuepress-plugin-auto-sidebar": "^2.3.2"
+  },
+  "dependencies": {
+    "vuepress-theme-reco": "^1.6.6"
   }
 }
